Markdown support by CTRL+B/I/U/S, CTRL+Z/SHIFT Fix show webpage on edit Fix message input CTRL+Z after changing dialog

--- a/src/scss/partials/_button.scss
+++ b/src/scss/partials/_button.scss
@@ -94,6 +94,12 @@
     transform: scale(1);
   }
 
+  &:not(.active) {
+    &, .btn-menu-item {
+      pointer-events: none !important;
+    }
+  }
+
   &.bottom-left {
     right: 0;
     top: 100%;
